Fixed overflow issue on Internet Explorer and changing the Discord URL. (dsc.bio is not a valid domain anymore and that's a security concern 😬)

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     text-decoration: none;
     box-sizing: border-box;
-    overflow-y: hidden;
+    overflow: hidden;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
